plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = '26'
    modules = ['javafx.controls', 'javafx.fxml']
}

sourceSets {
    main {
        java {
            srcDirs = ['jour05']
        }
    }
}

application {
    mainClass = 'jobs02'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
